refactoring, progress bar on training

--- a/phase_1_implementing_networks/seq2seq/attention_seq2seq/Makefile
+++ b/phase_1_implementing_networks/seq2seq/attention_seq2seq/Makefile
@@ -3,3 +3,4 @@ install:
 	test -d seq || virtualenv --system-site-packages seq
 	seq/bin/pip install --ignore-installed nltk
 	seq/bin/pip install --ignore-installed numpy
+	seq/bin/pip install --ignore-installed tqdm
