makefile, mature train script

--- a/phase_1_implementing_networks/seq2seq/attention_seq2seq/Makefile
+++ b/phase_1_implementing_networks/seq2seq/attention_seq2seq/Makefile
@@ -4,3 +4,4 @@ install:
 	seq/bin/pip install --ignore-installed nltk
 	seq/bin/pip install --ignore-installed numpy
 	seq/bin/pip install --ignore-installed tqdm
+	seq/bin/pip install --ignore-installed matplotlib
